config/static/layout.css
.content {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: -ms-page;
    width: 100vw;
    height: 80vh;
    margin-top: 100px;
}
.main_body {
    margin: 100px;
}
.footer {
    bottom: 0;
    width: 100vw;
    padding: 15px;
    color: black;
    background-color: rgba(212, 209, 209, 0.527);
    text-align: center;
}
.actorbox {
    position: relative;
    align-items: center;
    overflow: hidden;
}
.actorbox button {
    font-size: 30px;
    width: 40px;
    height: 40px;
    background-color: transparent;
    border: transparent;
    color: rgb(219, 153, 78);
    z-index: 3;
}
.actorcontainer {
    display: flex;
    flex-direction: row;
    overflow-x: hidden;
}
.actordetailbox {
    background-color: #f7f7f7;
    margin-right: 10px;
    padding: 10px;
    text-align: center;
    z-index: 1;
}
.actorbox .actoriconl {
    position: absolute;
    margin-top: 80px;
    margin-left: 0px;
    z-index: 30;
}
.actorbox .actoriconr {
    position: absolute;
    margin-top: -170px;
    margin-left: 90%;
    z-index: 30;
}

